--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -1,3 +1,5 @@
+extends ../main-layout/main-layout
+
 include ../../blocks/range-dates/range-dates
 include ../../blocks/subscription/subscription 
 include ../../blocks/expander/expander 
@@ -17,226 +19,229 @@ include ../../blocks/kit-logo/kit-logo
 include ../../blocks/rounded-button/rounded-button
 include ../../blocks/simple-button/simple-button
 
-doctype html
-html
-  head
-    title Form Elements
-  body
-    .form-elements
-      .form-elements__wrapper
-        .form-elements__logo
-          +kit-logo()
-        .form-elements__left 
-          .form-elements__item
-            .form-elements__head
-              .form-elements__title Text field
-              .form-elements__desc Default
-            +text-field({type: "text", placeholder: "Email"})
-          .form-elements__item
-            .form-elements__head
-              .form-elements__title Text field
-              .form-elements__desc Hover / Focus
-            +text-field({type: "text", placeholder: "Email", focused: true})
-          .form-elements__item
-            .form-elements__head
-              .form-elements__title Dropdown
-              .form-elements__desc Default
-            input.js-dropdown-guest-close
-          .form-elements__item
-            .form-elements__head
-              .form-elements__title Masked text field
-              .form-elements__desc Default
-            +text-field({type: "text", placeholder: "ДД.ММ.ГГГГ", masked: true})
+block title
+  title Form Elements
 
-          .form-elements__item.form-elements__item--big-space
-            +range-dates({
-              firstLabel: "Date dropdown",
-              secondLabel: "Date dropdown"
+block header
+
+block content
+  .form-elements
+    .form-elements__wrapper
+      .form-elements__logo
+        +kit-logo()
+      .form-elements__left 
+        .form-elements__item
+          .form-elements__head
+            .form-elements__title Text field
+            .form-elements__desc Default
+          +text-field({type: "text", placeholder: "Email"})
+        .form-elements__item
+          .form-elements__head
+            .form-elements__title Text field
+            .form-elements__desc Hover / Focus
+          +text-field({type: "text", placeholder: "Email", focused: true})
+        .form-elements__item
+          .form-elements__head
+            .form-elements__title Dropdown
+            .form-elements__desc Default
+          input.js-dropdown-guest-close
+        .form-elements__item
+          .form-elements__head
+            .form-elements__title Masked text field
+            .form-elements__desc Default
+          +text-field({type: "text", placeholder: "ДД.ММ.ГГГГ", masked: true})
+
+        .form-elements__item.form-elements__item--big-space
+          +range-dates({
+            firstLabel: "Date dropdown",
+            secondLabel: "Date dropdown"
+          })
+
+
+        .form-elements__item.form-elements__item--big-space
+          .form-elements__small-container
+            +date-dropdown({
+              label: "Filter date dropdown",
+              date: "19 авг - 23 авг"
             })
 
+        .form-elements__item.form-elements__item--big-space
+          .form-elements__small-container
+            .form-elements__head
+              .form-elements__title Subscription text field 
+            +subscription({ placeholder: "Email" })
 
-          .form-elements__item.form-elements__item--big-space
-            .form-elements__small-container
-              +date-dropdown({
-                label: "Filter date dropdown",
-                date: "19 авг - 23 авг"
-              })
-
-          .form-elements__item.form-elements__item--big-space
-            .form-elements__small-container
-              .form-elements__head
-                .form-elements__title Subscription text field 
-              +subscription({ placeholder: "Email" })
-
-          .form-elements__top
-            .form-elements__item.form-elements__item--big-space
-              .form-elements__small-container
-                .form-elements__head
-                  .form-elements__title Dropdown 
-                  .form-elements__desc Default
-                input.js-dropdown-room-close
-
+        .form-elements__top
           .form-elements__item.form-elements__item--big-space
             .form-elements__small-container
               .form-elements__head
                 .form-elements__title Dropdown 
                 .form-elements__desc Default
-              input.js-dropdown-room-open
+              input.js-dropdown-room-close
 
-          .form-elements__top-margin
-            .form-elements__item
-              +expander({
-                title: "Expandable checkbox list",
-                list: [
-                  { text: "Завтрак", checked: true }
-                ],
-                hide: true
-              })
+        .form-elements__item.form-elements__item--big-space
+          .form-elements__small-container
+            .form-elements__head
+              .form-elements__title Dropdown 
+              .form-elements__desc Default
+            input.js-dropdown-room-open
+
+        .form-elements__top-margin
           .form-elements__item
             +expander({
               title: "Expandable checkbox list",
               list: [
-                { text: "Завтрак", checked: false },
-                { text: "Письменный стол", checked: true },
-                { text: "Стул для кормления", checked: true },
-                { text: "Кроватка", checked: true },
-                { text: "Телевизор", checked: false },
-                { text: "Шампунь", checked: false },
-                { text: "Телевизор", checked: false },
-                { text: "Шампунь", checked: false },
-              ]
+                { text: "Завтрак", checked: true }
+              ],
+              hide: true
             })
-
-          .form-elements__item
-            +additions({
-              title: "Комфорт",
-              desc: "Шумопоглощающие стены",
-              icon: "tag_faces"
-            })
-            +additions({
-              title: "Удобство",
-              desc: "Окно в каждой из спален",
-              icon: "location_city"
-            })
-
-        .form-elements__mid 
-          .form-elements__item.form-elements__item--big-space
-            .form-elements__head.form-elements__head--accent
-              .form-elements__title Checkbox buttons 
-            +checkbox("Можно курить")
-            +checkbox("Можно с питомцами", true)
-            +checkbox("Можно пригралисть гостей (до 10 человек)", true)
-
-          .form-elements__item.form-elements__item--big-space
-            .form-elements__head.form-elements__head--accent
-              .form-elements__title Radio buttons 
-            +radio({ label: "Мужчина", name: "gender", checked: true })
-            +radio({ label: "Женщина", name: "gender", checked: false })
-
-          .form-elements__item.form-elements__item--big-space
-            .form-elements__head.form-elements__head--accent
-              .form-elements__title Toggle
-            .form-elements__item--sub
-              +toggle("Получать спецпредложения", true) 
-            .form-elements__item--sub
-              +toggle("Получать спецпредложения") 
-
-          .form-elements__item.form-elements__item--big-space
-            .form-elements__head.form-elements__head--accent
-              .form-elements__title Like button
-            span.form-elements__like
-              +like({
-                likes: 2,
-                liked: false
-              })
-
-            +like({
-              likes: 12,
-              liked: true
-            })
-
-          .form-elements__item
-            .form-elements__head.form-elements__head--accent
-              .form-elements__title Rate button
-            span.form-elements__inline
-              +rating(4)
-              .form-elements__rating
-                +rating(5)
-
-          .form-elements__item
-            .form-elements__head.form-elements__head--accent
-              .form-elements__title Dropdown 
-            input.js-dropdown-guest-open
-
-          .form-elements__top-margin
-            .form-elements__item
-              .form-elements__head.form-elements__head--accent
-                .form-elements__title Rich checkbox buttons
-              +checkboxList([
-                { 
-                  title: "Широкий коридор",
-                  desc: "Ширина коридоров в номере не менее 91 см."
-                },
-                { 
-                  title: "Помощник для инвалидов",
-                  desc: "На 1 этаже вас встретит специалист и проводит до номера."
-                },
-              ])
-
-        .form-elements__right 
-          .form-elements__item
-            .form-elements__head.form-elements__head--accent
-              .form-elements__title Range slider
-            .form-elements__slider
-              input.slider.js-slider
-
-          .form-elements__item
-            .form-elements__head.form-elements__head--accent
-              .form-elements__title Buttons
-            .form-elements__buttons
-              .form-elements__btn
-                +button({text: "Click me"})
-              .form-elements__btn
-                +button({text: "Click me", disabled: true})
-              .form-elements__btn.form-elements__btn--big
-                +rounded-button({text: "Click me"})
-              .form-elements__btn.form-elements__btn--big
-                +rounded-button({text: "Click me", isDisabled: true})
-              .form-elements__btn
-                +simple-button({text: "Click me"})
-              .form-elements__btn
-                +simple-button({text: "Click me", isDisabled: true})
-              +long-button("Перейти к оплате")
-
-          .form-elements__item
-            .form-elements__head.form-elements__head--accent
-              .form-elements__title Pagination 
-            +pagination()  
-
-          .form-elements__item
-            .form-elements__head.form-elements__head--accent
-              .form-elements__title Dropdown 
-            input.js-dropdown-guest-open-many
-
-          .form-elements__top-margin
-            .form-elements__item
-              .form-elements__head.form-elements__head--accent
-                .form-elements__title Bullet list 
-              
-              +bullet([
-                "Нельзя с питомцами",
-                "Без вечеринок и мероприятий",
-                "Время прибытия — после 13:00, а выезд до 12:00"
-              ])
-
-        .form-elements__bot 
-          +comment({
-            image: "../img/ava.jpg",
-            author: "Мурад Сарафанов",
-            date: "5 дней назад",
-            text: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.",
-            like: {
-              liked: true,
-              likes: 12
-            }
+        .form-elements__item
+          +expander({
+            title: "Expandable checkbox list",
+            list: [
+              { text: "Завтрак", checked: false },
+              { text: "Письменный стол", checked: true },
+              { text: "Стул для кормления", checked: true },
+              { text: "Кроватка", checked: true },
+              { text: "Телевизор", checked: false },
+              { text: "Шампунь", checked: false },
+              { text: "Телевизор", checked: false },
+              { text: "Шампунь", checked: false },
+            ]
           })
+
+        .form-elements__item
+          +additions({
+            title: "Комфорт",
+            desc: "Шумопоглощающие стены",
+            icon: "tag_faces"
+          })
+          +additions({
+            title: "Удобство",
+            desc: "Окно в каждой из спален",
+            icon: "location_city"
+          })
+
+      .form-elements__mid 
+        .form-elements__item.form-elements__item--big-space
+          .form-elements__head.form-elements__head--accent
+            .form-elements__title Checkbox buttons 
+          +checkbox("Можно курить")
+          +checkbox("Можно с питомцами", true)
+          +checkbox("Можно пригралисть гостей (до 10 человек)", true)
+
+        .form-elements__item.form-elements__item--big-space
+          .form-elements__head.form-elements__head--accent
+            .form-elements__title Radio buttons 
+          +radio({ label: "Мужчина", name: "gender", checked: true })
+          +radio({ label: "Женщина", name: "gender", checked: false })
+
+        .form-elements__item.form-elements__item--big-space
+          .form-elements__head.form-elements__head--accent
+            .form-elements__title Toggle
+          .form-elements__item--sub
+            +toggle("Получать спецпредложения", true) 
+          .form-elements__item--sub
+            +toggle("Получать спецпредложения") 
+
+        .form-elements__item.form-elements__item--big-space
+          .form-elements__head.form-elements__head--accent
+            .form-elements__title Like button
+          span.form-elements__like
+            +like({
+              likes: 2,
+              liked: false
+            })
+
+          +like({
+            likes: 12,
+            liked: true
+          })
+
+        .form-elements__item
+          .form-elements__head.form-elements__head--accent
+            .form-elements__title Rate button
+          span.form-elements__inline
+            +rating(4)
+            .form-elements__rating
+              +rating(5)
+
+        .form-elements__item
+          .form-elements__head.form-elements__head--accent
+            .form-elements__title Dropdown 
+          input.js-dropdown-guest-open
+
+        .form-elements__top-margin
+          .form-elements__item
+            .form-elements__head.form-elements__head--accent
+              .form-elements__title Rich checkbox buttons
+            +checkboxList([
+              { 
+                title: "Широкий коридор",
+                desc: "Ширина коридоров в номере не менее 91 см."
+              },
+              { 
+                title: "Помощник для инвалидов",
+                desc: "На 1 этаже вас встретит специалист и проводит до номера."
+              },
+            ])
+
+      .form-elements__right 
+        .form-elements__item
+          .form-elements__head.form-elements__head--accent
+            .form-elements__title Range slider
+          .form-elements__slider
+            input.slider.js-slider
+
+        .form-elements__item
+          .form-elements__head.form-elements__head--accent
+            .form-elements__title Buttons
+          .form-elements__buttons
+            .form-elements__btn
+              +button({text: "Click me"})
+            .form-elements__btn
+              +button({text: "Click me", disabled: true})
+            .form-elements__btn.form-elements__btn--big
+              +rounded-button({text: "Click me"})
+            .form-elements__btn.form-elements__btn--big
+              +rounded-button({text: "Click me", isDisabled: true})
+            .form-elements__btn
+              +simple-button({text: "Click me"})
+            .form-elements__btn
+              +simple-button({text: "Click me", isDisabled: true})
+            +long-button("Перейти к оплате")
+
+        .form-elements__item
+          .form-elements__head.form-elements__head--accent
+            .form-elements__title Pagination 
+          +pagination()  
+
+        .form-elements__item
+          .form-elements__head.form-elements__head--accent
+            .form-elements__title Dropdown 
+          input.js-dropdown-guest-open-many
+
+        .form-elements__top-margin
+          .form-elements__item
+            .form-elements__head.form-elements__head--accent
+              .form-elements__title Bullet list 
+            
+            +bullet([
+              "Нельзя с питомцами",
+              "Без вечеринок и мероприятий",
+              "Время прибытия — после 13:00, а выезд до 12:00"
+            ])
+
+      .form-elements__bot 
+        +comment({
+          image: "../img/ava.jpg",
+          author: "Мурад Сарафанов",
+          date: "5 дней назад",
+          text: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.",
+          like: {
+            liked: true,
+            likes: 12
+          }
+        })
+
+block footer
