reduce margin-bottom in find-apartments-card title

--- a/src/blocks/booking-card/booking-card.pug
+++ b/src/blocks/booking-card/booking-card.pug
@@ -12,7 +12,7 @@ mixin booking-card()
         +price("9 990")
       .booking-card__item.booking-card__item--up
         +range-dates({
-          inLabel: "Въезд",
+          inLabel: "Прибытие",
           outLabel: "Выезд",
         })
         .calendar
