remove useless modificator in booking-card

--- a/src/blocks/booking-card/booking-card.pug
+++ b/src/blocks/booking-card/booking-card.pug
@@ -22,5 +22,5 @@ mixin booking-card()
         input.js-dropdown-booking
       .booking-card__item 
         +invoice()
-      .booking-card__item--last 
+      .booking-card__item
         +long-button("Забронировать")
