#11 rename mods in booking-card

--- a/src/blocks/booking-card/booking-card.scss
+++ b/src/blocks/booking-card/booking-card.scss
@@ -27,11 +27,11 @@
     margin: 6px 0;
     position: relative;
 
-    &--up {
+    &--index-hight {
       z-index: 10;
     }
 
-    &--middle {
+    &--index-low {
       z-index: 5;
     }
   }
