--- a/src/blocks/bullet/bullet.scss
+++ b/src/blocks/bullet/bullet.scss
@@ -24,26 +24,26 @@
       background-color: $dark-shade-25;
       border-radius: 50%;
     }
-  }
 
-  &--small {
-    padding-bottom: 3px;
-    padding-left: 14px;
-  }
+    &--compacted {
+      padding-bottom: 3px;
+      padding-left: 14px;
+    }
 
-  &--excellent::before {
-    background: linear-gradient(180deg, #ffe39c 0%, #ffba9c 100%);
-  }
+    &--excellent::before {
+      background: linear-gradient(180deg, #ffe39c 0%, #ffba9c 100%);
+    }
 
-  &--good::before {
-    background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
-  }
+    &--good::before {
+      background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
+    }
 
-  &--normal::before {
-    background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
-  }
+    &--normal::before {
+      background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+    }
 
-  &--bad::before {
-    background: linear-gradient(180deg, #919191 0%, #3d4975 100%);
+    &--bad::before {
+      background: linear-gradient(180deg, #919191 0%, #3d4975 100%);
+    }
   }
 }
