#11 rename mod in checkbox block

--- a/src/blocks/checkbox/checkbox.scss
+++ b/src/blocks/checkbox/checkbox.scss
@@ -8,7 +8,7 @@
   cursor: pointer;
   user-select: none;
 
-  &--bold {
+  &--text-bold {
     font-family: Montserrat, Arial, sans-serif;
     font-weight: bold;
   }
