--- a/src/blocks/checkbox/checkbox.pug
+++ b/src/blocks/checkbox/checkbox.pug
@@ -6,7 +6,7 @@ mixin checkbox(label, checked=false)
 
 mixin checkboxList(items)
   each item in items
-    label.checkbox.checkbox--bold= item.title
+    label.checkbox.checkbox--text-bold= item.title
       input.checkbox__input(type="checkbox" checked=item.checked)
       .checkbox__mark
       .checkbox__description= item.desc
