#11 rename mod in dunut block

--- a/src/blocks/donut/donut.scss
+++ b/src/blocks/donut/donut.scss
@@ -19,7 +19,7 @@
     color: $purple;
   }
 
-  &__big {
+  &__main-value {
     font-family: Quicksand, Arial, sans-serif;
     font-size: 1.5rem;
     line-height: 1.875rem;
