#11 rename mod in gallery block

--- a/src/blocks/gallery/gallery.scss
+++ b/src/blocks/gallery/gallery.scss
@@ -44,7 +44,7 @@
     border-radius: 50%;
     border: 1px solid $white;
 
-    &--fill {
+    &--filled {
       background-color: $white;
     }
   }
