--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -7,9 +7,8 @@
   &__room-config {
     position: absolute;
     top: 140px;
-    
+    left: 100px;
     z-index: 1;
-    left: auto;
 
     @media (max-width: 767px) {
       left: calc(50% - 380px / 2);
