#11 change mod names in image-card and apartment-info blocks

--- a/src/blocks/image-card/image-card.pug
+++ b/src/blocks/image-card/image-card.pug
@@ -7,13 +7,11 @@ mixin image-card({image, arrows, position, lux, price, rating, comments})
   .image-card
     +gallery(image, arrows)
     .image-card__body
-      .image-card__item.image-card__item--border
+      .image-card__row.image-card__row--underlined
         +apartment-info({number: position, lux: lux})
-      .image-card__item.image-card__item--right.image-card__item--border
         +price(price)
-      .image-card__item.image-card__item--rating
+      .image-card__row
         +rating(rating)
-      .image-card__item.image-card__item--right
-        b 
-          | #{comments} 
-        | Отзывов
+        .image-card__comments
+          .image-card__text.image-card__text--accented= comments
+          .image-card__text &nbsp;Отзывов
