--- a/src/blocks/apartment-info/apartment-info.scss
+++ b/src/blocks/apartment-info/apartment-info.scss
@@ -11,8 +11,13 @@
     padding-right: 4px;
     font-weight: bold;
     text-transform: uppercase;
+    margin: 0;
 
-    &--accented {
+    &--font-medium {
+      font-size: 1.2rem;
+    }
+
+    &--font-large {
       font-size: 1.5rem;
     }
   }
