#11 change mod names in invoice

--- a/src/blocks/invoice/invoice.pug
+++ b/src/blocks/invoice/invoice.pug
@@ -4,12 +4,12 @@ mixin invoice()
       .invoice__service 9 990&#8381; х 4 суток
       div.invoice__sum 39 960&#8381;
     .invoice__row
-      .invoice__service.invoice__service--info Сбор за услуги: скидка 2 179&#8381;
+      .invoice__service.invoice__service--with-icon Сбор за услуги: скидка 2 179&#8381;
       div.invoice__sum 0&#8381;
     .invoice__row
-      .invoice__service.invoice__service--info Сбор за дополнительные услуги
+      .invoice__service.invoice__service--with-icon Сбор за дополнительные услуги
       div.invoice__sum 300&#8381;
-    .invoice__row.invoice__row--total
+    .invoice__row.invoice__row--font-large
       h2.invoice__block Итого
       .invoice__line
       h2.invoice__block 38 081&#8381;
