--- a/src/blocks/booking-card/booking-card.pug
+++ b/src/blocks/booking-card/booking-card.pug
@@ -20,7 +20,7 @@ mixin booking-card()
       .booking-card__item.booking-card__item--index-low
         h3.booking-card__subtitle Гости
         input.js-dropdown-booking
-      .booking-card__item 
+      .booking-card__invoice
         +invoice()
       .booking-card__item
         +long-button("Забронировать")
