--- a/src/blocks/invoice/invoice.scss
+++ b/src/blocks/invoice/invoice.scss
@@ -8,7 +8,7 @@
     justify-content: space-between;
     margin-bottom: 10px;
 
-    &--total {
+    &--font-large {
       font-family: Quicksand, Arial, sans-serif;
       font-weight: bold;
       color: $dark-shade-100;
@@ -34,7 +34,7 @@
     padding-right: 24px;
     width: 80%;
 
-    &--info::after {
+    &--with-icon::after {
       position: absolute;
       content: 'i';
       top: 0;
