--- a/src/blocks/hero/hero.pug
+++ b/src/blocks/hero/hero.pug
@@ -1,8 +1,4 @@
-mixin hero({theme, text})
-  - let classes = ["hero"]
-
-  if theme == "secondary"
-    - classes.push("hero--img2")
-
-  div(class=classes) 
+mixin hero({image, text = ""})
+  .hero
+    img.hero__image(src=image)
     .hero__text= text
