--- a/src/blocks/hero/hero.scss
+++ b/src/blocks/hero/hero.scss
@@ -2,13 +2,9 @@
 
 .hero {
   position: relative;
-  background-image: url('../img/image-3.png');
-  min-height: 702px;
-  background-repeat: no-repeat;
-  background-position-x: center;
 
-  &--img2 {
-    background-image: url('../img/image-4.png');
+  &__image {
+    width: 100%;
   }
 
   &__text {
