#11 rename mods in price class

--- a/src/blocks/price/price.pug
+++ b/src/blocks/price/price.pug
@@ -1,4 +1,4 @@
 mixin price(price)
   .price
-    span.price--bold #{price}&#8381; 
-    span.price--small в сутки
+    span.price--font-bold #{price}&#8381; 
+    span.price--font-small в сутки
