--- a/src/blocks/price/price.scss
+++ b/src/blocks/price/price.scss
@@ -1,14 +1,14 @@
 @import '../../scss/colors.scss';
 
 .price {
+  font-family: Montserrat, Arial, sans-serif;
   color: $dark-shade-50;
 
-  &--bold {
-    font-family: Montserrat, Arial, sans-serif;
+  &--font-bold {
     font-weight: bold;
   }
 
-  &--small {
+  &--font-small {
     font-size: .75rem;
   }
 }
