#11 rename small mod in range-dates class

--- a/src/blocks/range-dates/range-dates.scss
+++ b/src/blocks/range-dates/range-dates.scss
@@ -13,7 +13,7 @@
     text-transform: uppercase;
     color: $dark-shade-100;
 
-    &--small {
+    &--width-small {
       width: 150px;
     }
   }
