#16 rebase images into his blocks directories

--- a/src/blocks/comment/comment.pug
+++ b/src/blocks/comment/comment.pug
@@ -2,7 +2,7 @@ include ../like/like
 
 mixin comment({image, author, date, like, text})
   article.comment
-    img.comment__avatar(src=image alt="user avatar")
+    img.comment__avatar(src=require(`blocks/comment/images/${image}`) alt="user avatar")
     div.comment__author-container
       .comment__author= author
       .comment__date= date
