--- a/src/blocks/kit-logo/kit-logo.scss
+++ b/src/blocks/kit-logo/kit-logo.scss
@@ -1,5 +1,5 @@
 .kit-logo {
-  background-image: url('../img/logo.svg');
+  background-image: url('images/logo.svg');
   background-repeat: no-repeat;
   width: 48px;
   height: 48px;
