--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -33,7 +33,7 @@ block content
             .js-calendar
           .cards__item
             +image-card({
-              image: "../img/apartments-1.png",
+              image: "apartments-1.png",
               arrows: true,
               position: 888,
               lux: true,
@@ -43,7 +43,7 @@ block content
             })
           .cards__item
             +image-card({
-              image: "../img/apartments-2.png",
+              image: "apartments-2.png",
               arrows: false,
               position: 840,
               lux: false,
