--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -234,7 +234,7 @@ block content
 
       .form-elements__bot 
         +comment({
-          image: "../img/ava.jpg",
+          image: "ava.jpg",
           author: "Мурад Сарафанов",
           date: "5 дней назад",
           text: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.",
