--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -11,9 +11,9 @@ block title
 
 block content
   +hero-galery([
-    "../img/hero-galery/galery-primary.png",
-    "../img/hero-galery/galery-secondary-1.png",
-    "../img/hero-galery/galery-secondary-2.png"
+    "galery-primary.png",
+    "galery-secondary-1.png",
+    "galery-secondary-2.png"
   ])
   
   .room-details
@@ -55,14 +55,14 @@ block content
           h2.room-details__title Отзывы посетителей номера
           .room-details__inner
             +comment({
-              image: "../img/ava.jpg",
+              image: "ava.jpg",
               author: "Мурад Сарафанов",
               date: "5 дней назад",
               like: { likes: 5, liked: true },
               text: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей."
             })
           +comment({
-            image: "../img/ava.jpg",
+            image: "ava.jpg",
             author: "Патрисия Стёклышкова",
             date: "Неделю назад",
             like: { likes: 2, liked: false },
