--- a/src/pages/search-room/search-room.pug
+++ b/src/pages/search-room/search-room.pug
@@ -95,7 +95,7 @@ block content
         h1.search-room__header Номера, которые мы для вас подобрали
         .search-room__room-card
           +image-card({
-            image: "../img/apartments-1.png",
+            image: "apartments-1.png",
             arrows: true,
             position: 888,
             lux: true, 
@@ -106,7 +106,7 @@ block content
 
         .search-room__room-card
           +image-card({
-            image: "../img/apartments-2.png",
+            image: "apartments-2.png",
             arrows: false,
             position: 840,
             lux: true, 
@@ -117,7 +117,7 @@ block content
 
         .search-room__room-card
           +image-card({
-            image: "../img/apartments-3.png",
+            image: "apartments-3.png",
             arrows: false,
             position: 980,
             lux: true, 
@@ -128,7 +128,7 @@ block content
 
         .search-room__room-card
           +image-card({
-            image: "../img/apartments-4.png",
+            image: "apartments-4.png",
             arrows: false,
             position: 856,
             lux: false, 
@@ -139,7 +139,7 @@ block content
 
         .search-room__room-card
           +image-card({
-            image: "../img/apartments-5.png",
+            image: "apartments-5.png",
             arrows: false,
             position: 740,
             lux: false, 
@@ -150,7 +150,7 @@ block content
 
         .search-room__room-card
           +image-card({
-            image: "../img/apartments-6.png",
+            image: "apartments-6.png",
             arrows: false,
             position: 982,
             lux: false, 
@@ -161,7 +161,7 @@ block content
 
         .search-room__room-card
           +image-card({
-            image: "../img/apartments-7.png",
+            image: "apartments-7.png",
             arrows: false,
             position: 678,
             lux: false, 
@@ -172,7 +172,7 @@ block content
 
         .search-room__room-card
           +image-card({
-            image: "../img/apartments-8.png",
+            image: "apartments-8.png",
             arrows: false,
             position: 450,
             lux: false, 
@@ -183,7 +183,7 @@ block content
 
         .search-room__room-card
           +image-card({
-            image: "../img/apartments-9.png",
+            image: "apartments-9.png",
             arrows: false,
             position: 350,
             lux: false, 
@@ -194,7 +194,7 @@ block content
 
         .search-room__room-card
           +image-card({
-            image: "../img/apartments-10.png",
+            image: "apartments-10.png",
             arrows: false,
             position: 666,
             lux: false, 
@@ -205,7 +205,7 @@ block content
 
         .search-room__room-card
           +image-card({
-            image: "../img/apartments-11.png",
+            image: "apartments-11.png",
             arrows: false,
             position: 444,
             lux: false, 
@@ -216,7 +216,7 @@ block content
 
         .search-room__room-card
           +image-card({
-            image: "../img/apartments-12.png",
+            image: "apartments-12.png",
             arrows: false,
             position: 352,
             lux: false, 
