--- a/src/pages/sign-in/sign-in.pug
+++ b/src/pages/sign-in/sign-in.pug
@@ -7,7 +7,7 @@ block title
   title Sign In
 
 block hero
-  +hero({text: "", image: "../img/hero-secondary.png"})
+  +hero({text: "", image: "hero-secondary.png"})
 
 block card
   .sign-in
