--- a/src/pages/registration/registration.pug
+++ b/src/pages/registration/registration.pug
@@ -7,7 +7,7 @@ block title
   title Registration
 
 block hero
-  +hero({image: "../img/hero-secondary.png"})
+  +hero({image: "hero-secondary.png"})
 
 block card 
   .registration
