#11 rename modificators in bullet block

--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -47,10 +47,10 @@ block content
 
             .room-details__list
               ul.bullet
-                li.bullet__element.bullet__element--excellent.bullet__element--compacted Великолепно
-                li.bullet__element.bullet__element--good.bullet__element--compacted Хорошо
-                li.bullet__element.bullet__element--normal.bullet__element--compacted Удовлетворительно
-                li.bullet__element.bullet__element--bad.bullet__element--compacted Разачарован
+                li.bullet__element.bullet__element--yellow-point.bullet__element--compacted Великолепно
+                li.bullet__element.bullet__element--blue-point.bullet__element--compacted Хорошо
+                li.bullet__element.bullet__element--pink-point.bullet__element--compacted Удовлетворительно
+                li.bullet__element.bullet__element--black-point.bullet__element--compacted Разачарован
         .room-details__room-comments
           h2.room-details__title Отзывы посетителей номера
           .room-details__inner
