#11 change class in header-footers block

--- a/src/pages/headers-footers/headers-footers.pug
+++ b/src/pages/headers-footers/headers-footers.pug
@@ -45,7 +45,7 @@ block content
       text: "Documentation",
       link: "/mock-address",
     }];
-  .main-layout__kit
+  .headers-footers__kit
     .headers-footers
       .headers-footers__logo
         +kit-logo()
