--- a/src/blocks/range-dates/range-dates.pug
+++ b/src/blocks/range-dates/range-dates.pug
@@ -1,6 +1,6 @@
 mixin range-dates({inLabel, outLabel})
   .range-dates
-    input.js-calendar.js-hidden.calendar
+    input.js-calendar.js-hidden.range-dates__calendar
     label.range-dates__label.range-dates__label--width-small= inLabel
       span.range-dates__wrapper
         input.range-dates__date-dropdown(placeholder="ДД.ММ.ГГГГ")
