#19 move code to calendar and added mixin

--- a/src/blocks/range-dates/range-dates.pug
+++ b/src/blocks/range-dates/range-dates.pug
@@ -1,6 +1,8 @@
+include ../calendar/calendar
+
 mixin range-dates({inLabel, outLabel})
   .range-dates
-    input.js-calendar.js-hidden.range-dates__calendar
+    +calendar()
     label.range-dates__label.range-dates__label--width-small= inLabel
       span.range-dates__wrapper
         input.range-dates__date-dropdown(placeholder="ДД.ММ.ГГГГ")
