--- a/src/blocks/calendar/datepicker.scss
+++ b/src/blocks/calendar/datepicker.scss
@@ -18,105 +18,110 @@
     display: flex;
     justify-content: space-between;
   }
-}
 
-.datepicker--cell {
-  width: 40px;
-  height: 40px;
-  color: $dark-shade-50;
+  &--cell {
+    width: 40px;
+    height: 40px;
+    color: $dark-shade-50;
 
-  &.-current- {
-    background-image: $light-gradient;
-    border-radius: 50%;
-    color: $white;
-    font-family: Montserrat, Arial, sans-serif;
-    font-weight: bold;
+    &.-current- {
+      background-image: $light-gradient;
+      border-radius: 50%;
+      color: $white;
+      font-family: Montserrat, Arial, sans-serif;
+      font-weight: bold;
+
+      &.-focus- {
+        background-image: $light-gradient;
+        color: $white;
+      }
+
+      &.-in-range- {
+        color: $white;
+      }
+    }
 
     &.-focus- {
-      background-image: $light-gradient;
-      color: $white;
+      background: none;
+    }
+
+    &.-selected- {
+      border-radius: 50%;
+      background-image: $gradient;
+      font-family: Montserrat, Arial, sans-serif;
+      font-weight: bold;
+
+      &.-focus- {
+        background-image: $gradient;
+      }
     }
 
     &.-in-range- {
-      color: $white;
+      background: $gradient-25;
+      color: $dark-shade-50;
+    }
+
+    &.-range-from- {
+      position: relative;
+
+      &::after {
+        position: absolute;
+        content: '';
+        width: 20px;
+        height: 40px;
+        background-image: $gradient-25;
+        right: 0;
+      }
+    }
+
+    &.-range-to- {
+      position: relative;
+
+      &::before {
+        position: absolute;
+        content: '';
+        width: 20px;
+        height: 40px;
+        background-image: $gradient-25;
+        left: 0;
+      }
     }
   }
 
-  &.-focus- {
-    background: none;
-  }
-
-  &.-selected- {
-    border-radius: 50%;
-    background-image: $gradient;
+  &--day-name {
     font-family: Montserrat, Arial, sans-serif;
     font-weight: bold;
-
-    &.-focus- {
-      background-image: $gradient;
-    }
+    color: $purple;
+    width: 40px;
+    height: 40px;
+    text-transform: none;
   }
 
-  &.-in-range- {
-    background: $gradient-25;
-    color: $dark-shade-50;
+  &--nav {
+    border-bottom: none;
+    padding: 6px 0 14px;
+    font-size: 1.5rem;
   }
 
-  &.-range-from- {
-    position: relative;
-
-    &::after {
-      position: absolute;
-      content: '';
-      width: 20px;
-      height: 40px;
-      background-image: $gradient-25;
-      right: 0;
-    }
+  &--nav-action {
+    width: auto;
+    color: $purple;
   }
 
-  &.-range-to- {
-    position: relative;
+  &--pointer {
+    display: none;
+  }
 
-    &::before {
-      position: absolute;
-      content: '';
-      width: 20px;
-      height: 40px;
-      background-image: $gradient-25;
-      left: 0;
-    }
+  &--nav-title,
+  &--nav-title i {
+    color: $dark-shade-100;
+    font-size: 1.19rem;
+    font-family: Quicksand, Arial, sans-serif;
+    font-weight: bold;
   }
 }
 
-.datepicker--day-name {
-  font-family: Montserrat, Arial, sans-serif;
-  font-weight: bold;
-  color: $purple;
-  width: 40px;
-  height: 40px;
-  text-transform: none;
-}
 
-.datepicker--nav {
-  border-bottom: none;
-  padding: 6px 0 14px;
-  font-size: 1.5rem;
-}
 
-.datepicker--nav-title,
-.datepicker--nav-title i {
-  color: $dark-shade-100;
-  font-size: 1.19rem;
-  font-family: Quicksand, Arial, sans-serif;
-  font-weight: bold;
-}
 
-.datepicker--nav-action {
-  width: auto;
-  color: $purple;
-}
 
-.datepicker--pointer {
-  display: none;
-}
