--- a/src/pages/colors-type/color-types.scss
+++ b/src/pages/colors-type/color-types.scss
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     justify-items: center;
-    padding: 144px 0 0 0;
+    margin-top: 67px;
 
     @media (min-width: $small-size) {
       flex-direction: row;
@@ -20,9 +20,7 @@
   }
   
   &__logo {
-    position: absolute;
-    top: 30px;
-    left: 30px;
+    margin-top: 30px;
   }
 
   &__pallete {
