--- a/src/pages/headers-footers/headers-footers.pug
+++ b/src/pages/headers-footers/headers-footers.pug
@@ -1,16 +1,22 @@
-extends ../main-layout/main-layout
-
+include ../../blocks/kit-logo/kit-logo
 include ../../blocks/header/header
 include ../../blocks/footer/footer
 include ../../blocks/light-footer/light-footer
-include ../../blocks/kit-logo/kit-logo
 
-block title
-  title Headers and Footer
-
-block header
-
-block content
+doctype html
+html
+  head
+    meta(http-equiv="Content-Type", content="text/html;charset=UTF-8")
+    meta(name="viewport" content="initial-scale=1.0, width=device-width")
+    link(rel="apple-touch-icon" sizes="180x180" href="../favicons/apple-touch-icon.png")
+    link(rel="icon" type="image/png" sizes="32x32" href="../favicons/favicon-32x32.png")
+    link(rel="icon" type="image/png" sizes="16x16" href="../favicons/favicon-16x16.png")
+    link(rel="mask-icon" href="../favicons/safari-pinned-tab.svg" color="#5bbad5")
+    meta(name="msapplication-TileColor" content="#da532c")
+    meta(name="theme-color" content="#ffffff")
+    meta(name="keywords", content="fsd template")
+    meta(name="description", content="this is the test project")
+    title Headers & Footers
   - 
     var menu = [{
       text: "Home",
@@ -45,60 +51,57 @@ block content
       text: "Documentation",
       link: "/mock-address",
     }];
-  .headers-footers__kit
-    .headers-footers
-      .headers-footers__logo
-        +kit-logo()
-      .headers-footers__item.headers-footers__item--up
-        +header({
-          isLogged: false, 
-          buttons: {
-            enter: "Login",
-            register: "Register"
+  body.headers-footers
+    .headers-footers__logo
+      +kit-logo()
+    .headers-footers__item.headers-footers__item--up
+      +header({
+        isLogged: false, 
+        buttons: {
+          enter: "Login",
+          register: "Register"
+        },
+        menu: menu
+      })
+    .headers-footers__item
+      +header({isLogged: true, menu: menu})
+    .headers-footers__item.headers-footers__item--down
+      +footer({
+        main: "Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget nullam pellentesque aliquam curabitur cociis",
+        navigation: [
+          {
+            title: "Navigation",
+            links: [
+              { url: "/mock-address", text: "About Us" },
+              { url: "/mock-address", text: "News" },
+              { url: "/mock-address", text: "Support" },
+              { url: "/mock-address", text: "Products" },
+            ]
           },
-          menu: menu
-        })
-      .headers-footers__item
-        +header({isLogged: true, menu: menu})
-      .headers-footers__item.headers-footers__item--down
-        +footer({
-          main: "Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget nullam pellentesque aliquam curabitur cociis",
-          navigation: [
-            {
-              title: "Navigation",
-              links: [
-                { url: "/mock-address", text: "About Us" },
-                { url: "/mock-address", text: "News" },
-                { url: "/mock-address", text: "Support" },
-                { url: "/mock-address", text: "Products" },
-              ]
-            },
-            {
-              title: "About Us",
-              links: [
-                { url: "/mock-address", text: "About Us" },
-                { url: "/mock-address", text: "Our team" },
-                { url: "/mock-address", text: "Careers" },
-                { url: "/mock-address", text: "Investors" },
-              ]
-            },
-            {
-              title: "Support",
-              links: [
-                { url: "/mock-address", text: "Documentation" },
-                { url: "/mock-address", text: "Community" },
-                { url: "/mock-address", text: "Get in Touch" },
-              ]
-            },
-          ],
-          copy: "Copyright © 2018 Toxin UI Kit. All rights reserved.",
-          subscription: {
-            title: "Subscribe to out newsletter",
-            text: "Receive our latest news and promotions in your inbox!",
-            placeholder: "Your email address"
-          }
-        })
-      .headers-footers__item
-        +light-footer()
-
-block footer
+          {
+            title: "About Us",
+            links: [
+              { url: "/mock-address", text: "About Us" },
+              { url: "/mock-address", text: "Our team" },
+              { url: "/mock-address", text: "Careers" },
+              { url: "/mock-address", text: "Investors" },
+            ]
+          },
+          {
+            title: "Support",
+            links: [
+              { url: "/mock-address", text: "Documentation" },
+              { url: "/mock-address", text: "Community" },
+              { url: "/mock-address", text: "Get in Touch" },
+            ]
+          },
+        ],
+        copy: "Copyright © 2018 Toxin UI Kit. All rights reserved.",
+        subscription: {
+          title: "Subscribe to out newsletter",
+          text: "Receive our latest news and promotions in your inbox!",
+          placeholder: "Your email address"
+        }
+      })
+    .headers-footers__item
+      +light-footer()
