--- a/src/pages/headers-footers/headers-footers.scss
+++ b/src/pages/headers-footers/headers-footers.scss
@@ -1,16 +1,16 @@
 @import '../../scss/colors.scss';
 
 .headers-footers {
-  padding-top: 150px;
+  background-color: #e5e5e5;
+  color: rgba(31, 32, 65, 0.75);
+  font-family: Montserrat, Arial, sans-serif;
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+  padding: 0;
+  margin: 0;
 
   &__logo {
-    position: absolute;
-    left: 30px;
-    top: 30px;
-  }
-
-  &__kit {
-    background-color: #e5e5e5;
+    margin: 30px;
   }
 
   &__item {
