--- a/src/blocks/header/header.pug
+++ b/src/blocks/header/header.pug
@@ -20,4 +20,5 @@ mixin header({isLogged, buttons: {enter = "", register = ""} = {}, menu})
           +button({text: register})
       .header__enter-toggle
         +icon-button({icon: "account_box"})
-        +icon-button({icon: "menu", isMenu: true})
+        .header__menu-button
+          +icon-button({icon: "menu", isMenu: true})
