--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -28,6 +28,14 @@
     }
   }
 
+  &__menu-button {
+    display: none;
+
+    @media (max-width: 767px) {
+      display: block;
+    }
+  }
+
   &__logo {
     margin-right: auto;
   }
@@ -36,7 +44,7 @@
     display: none;
 
     @media (max-width: 767px) {
-      display: block;
+      display: inline-block;
     }
   }
 
@@ -45,7 +53,7 @@
     padding: 0 10px;
 
     @media (max-width: 992px) {
-      display: block;
+      display: flex;
     }
   }
 
