--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -20,8 +20,7 @@
     align-items: center;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 20px;
-    height: 70px;
+    padding: 15px 20px;
 
     @media (max-width: 992px) {
       justify-content: center;
@@ -38,6 +37,10 @@
 
   &__logo {
     margin-right: auto;
+
+    @media (max-width: 767px) {
+      display: none;
+    }
   }
 
   &__menu-toggle {
@@ -72,12 +75,9 @@
   }
 
   &__menu {
-    min-width: 352px;
 
     @media (max-width: 767px) {
-      position: absolute;
-      top: 0;
-      bottom: 0;
+      width: 100%;
     }
   }
 }
