--- a/src/blocks/footer/footer.pug
+++ b/src/blocks/footer/footer.pug
@@ -6,27 +6,31 @@ mixin footer({main, navigation, copy, subscription: {title, text, placeholder}})
   footer.footer
     .footer__wrapper
       .footer__container
-        section.footer__block
-          +site-logo()
-          p.footer__text= main
+        .footer__left-side
+          section.footer__block
+            +site-logo()
+            p.footer__text= main
 
-        .footer__nav-container
-          each link_block in navigation
-            section.footer__nav
-              .footer__block__header
-                h3.footer__subtitle= link_block.title
-              p.footer__paragraph
-                each link in link_block.links
-                  a.footer__link(href=link.url)= link.text
-      
-        section.footer__block
-          .footer__block__header
-            h3.footer__subtitle= title
-          p.footer__paragraph= text
-          +subscription({ placeholder: placeholder })
+        .footer__right-side
+          .footer__nav-container
+            each link_block in navigation
+              section.footer__nav
+                .footer__block__header
+                  h3.footer__subtitle= link_block.title
+                p.footer__paragraph
+                  each link in link_block.links
+                    a.footer__link(href=link.url)= link.text
+        
+          section.footer__block
+            .footer__block__header
+              h3.footer__subtitle= title
+            p.footer__paragraph= text
+            .footer__subscription
+              +subscription({ placeholder: placeholder })
     
     section.footer__line
       .footer__wrapper
         .footer__copy
           p.footer__paragraph= copy
-          +socials()
+          .footer__socials
+            +socials()
