--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -5,7 +5,7 @@
   width: 100%;
   background-color: $white;
   line-height: 1.5rem;
-  padding-top: 100px;
+  padding-top: 88px;
   box-shadow: inset 0px 1px 0px rgba(31, 32, 65, 0.1);
 
   &__wrapper {
@@ -20,7 +20,9 @@
 
   &__container {
     display: flex;
-    margin: 0 auto 84px;
+    margin: 0 auto 80px;
+    flex-wrap: wrap;
+    justify-content: center;
 
     @media (max-width: 992px) {
       justify-content: space-around;
@@ -45,9 +47,16 @@
     }
 
     &__header {
-      margin-bottom: 22px;
       margin-top: 2px;
     }
+  }
+
+  &__socials {
+    margin-top: 10px;
+  }
+
+  &__subscription {
+    margin-top: 22px;
   }
 
   &__subtitle {
@@ -55,6 +64,7 @@
     color: $dark-shade-100;
     font-size: .75rem;
     text-transform: uppercase;
+    margin-bottom: 0;
   }
 
   &__nav-container {
@@ -64,6 +74,14 @@
     @media (max-width: 992px) {
       display: none;
     }
+  }
+
+  &__left-side {
+    margin-top: 12px;
+  }
+
+  &__right-side {
+    display: flex;
   }
 
   &__nav {
@@ -80,7 +98,7 @@
 
   &__line {
     border-top: 1px solid $dark-shade-25;
-    padding: 10px 0;
+    padding: 8px 0;
   }
 
   &__copy {
