--- a/src/blocks/color/color.scss
+++ b/src/blocks/color/color.scss
@@ -48,11 +48,11 @@
   }
 
   &__title {
-    font-family: Quicksand, Arial, sans-serif;
+    font-family: Quicksand, OpenSans, sans-serif;
     font-weight: bold;
   }
 
   &__body {
-    font-family: Montserrat, Arial, sans-serif;
+    font-family: Montserrat, OpenSans, sans-serif;
   }
 }
