--- a/src/blocks/comment/comment.scss
+++ b/src/blocks/comment/comment.scss
@@ -8,7 +8,7 @@
 
   &__author {
     padding-top: 0.143em;
-    font-family: Montserrat, Arial, sans-serif;
+    font-family: Montserrat, OpenSans, sans-serif;
     font-weight: bold;
   }
 
