--- a/src/blocks/donut/donut.scss
+++ b/src/blocks/donut/donut.scss
@@ -12,7 +12,7 @@
     position: absolute;
     top: 50px;
     left: 44px;
-    font-family: Montserrat, Arial, sans-serif;
+    font-family: Montserrat, OpenSans, sans-serif;
     font-weight: bold;
     letter-spacing: 0.03rem;
     line-height: .9375rem;
@@ -20,7 +20,7 @@
   }
 
   &__main-value {
-    font-family: Quicksand, Arial, sans-serif;
+    font-family: Quicksand, OpenSans, sans-serif;
     font-size: 1.5rem;
     line-height: 1.875rem;
     margin: 0;
