--- a/src/blocks/invoice/invoice.scss
+++ b/src/blocks/invoice/invoice.scss
@@ -9,7 +9,7 @@
     margin-bottom: 10px;
 
     &--font-large {
-      font-family: Quicksand, Arial, sans-serif;
+      font-family: Quicksand, OpenSans, sans-serif;
       font-weight: bold;
       color: $dark-shade-100;
       margin-top: 16px;
@@ -39,7 +39,7 @@
       content: 'i';
       top: 0;
       right: 0;
-      font-family: Montserrat, Arial, sans-serif;
+      font-family: Montserrat, OpenSans, sans-serif;
       font-weight: bold;
       color: $dark-shade-25;
       border: 1px solid $dark-shade-25;
