--- a/src/blocks/long-button/long-button.scss
+++ b/src/blocks/long-button/long-button.scss
@@ -3,7 +3,7 @@
 .long-button {
   position: relative;
   display: inline-block;
-  font-family: Montserrat, Arial, sans-serif;
+  font-family: Montserrat, OpenSans, sans-serif;
   color: $white;
   background-image: $gradient;
   border: none;
