--- a/src/blocks/menu/menu.scss
+++ b/src/blocks/menu/menu.scss
@@ -31,7 +31,7 @@
     }
 
     &--current {
-      font-family: Montserrat, Arial, sans-serif;
+      font-family: Montserrat, OpenSans, sans-serif;
       font-weight: bold;
       cursor: default;
     }
