--- a/src/blocks/price/price.scss
+++ b/src/blocks/price/price.scss
@@ -1,7 +1,7 @@
 @import '../../scss/colors.scss';
 
 .price {
-  font-family: Montserrat, Arial, sans-serif;
+  font-family: Montserrat, OpenSans, sans-serif;
   color: $dark-shade-50;
 
   &--font-bold {
