--- a/src/blocks/rounded-button/rounded-button.scss
+++ b/src/blocks/rounded-button/rounded-button.scss
@@ -4,7 +4,7 @@
   display: inline-block;
   position: relative;
   top: 2px;
-  font-family: Montserrat, Arial, sans-serif;
+  font-family: Montserrat, OpenSans, sans-serif;
   color: $purple;
   border-radius: 22px;
   border: none;
