--- a/src/blocks/slider/slider.scss
+++ b/src/blocks/slider/slider.scss
@@ -30,7 +30,7 @@
 }
 
 .slider__min-max {
-  font-family: Montserrat, Arial, sans-serif;
+  font-family: Montserrat, OpenSans, sans-serif;
   position: relative;
   top: -20px;
   font-size: .75rem;
