--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -93,7 +93,7 @@
   }
 
   &__title {
-    font-family: Montserrat, Arial, sans-serif;
+    font-family: Montserrat, OpenSans, sans-serif;
     font-weight: bold;
     color: $dark-shade-100;
   }
