--- a/src/pages/headers-footers/headers-footers.scss
+++ b/src/pages/headers-footers/headers-footers.scss
@@ -3,7 +3,7 @@
 .headers-footers {
   background-color: #e5e5e5;
   color: rgba(31, 32, 65, 0.75);
-  font-family: Montserrat, Arial, sans-serif;
+  font-family: Montserrat, OpenSans, sans-serif;
   font-size: 0.875rem;
   line-height: 1.5rem;
   padding: 0;
