--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -75,7 +75,7 @@
   }
 
   &__title {
-    font-family: Quicksand, Arial, sans-serif;
+    font-family: Quicksand, OpenSans, sans-serif;
     color: $dark-shade-100;
     font-size: 1.1875rem;
     font-weight: bold;
