--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -53,3 +53,28 @@
     url('../fonts/fontawesome/fa-brands-400.ttf') format('opentype'),
     url('../fonts/fontawesome/fa-regular-400.svg') format('svg');
 }
+
+@font-face {
+  font-family: 'OpenSans';
+  src: url('../fonts/open-sans/open-sans-regular.svg') format('svg'),
+       url('../fonts/open-sans/open-sans-regular.ttf') format('truetype'),
+			 url('../fonts/open-sans/open-sans-regular.woff') format('woff'),
+			 url('../fonts/open-sans/open-sans-regular.woff2') format('woff2'),
+			 url('../fonts/open-sans/open-sans-regular.eot') format('embedded-opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'OpenSans';
+  src: url('../fonts/open-sans/open-sans-bold.svg') format('svg'),
+			 url('../fonts/open-sans/open-sans-bold.ttf') format('truetype'),
+			 url('../fonts/open-sans/open-sans-bold.eot') format('embedded-opentype'),
+			 url('../fonts/open-sans/open-sans-bold.woff') format('woff'),
+			 url('../fonts/open-sans/open-sans-bold.woff2') format('woff2');
+  font-weight: bold;
+  font-style: normal;
+}
+
+
+
