--- a/src/blocks/additions/additions.scss
+++ b/src/blocks/additions/additions.scss
@@ -13,7 +13,7 @@
   }
 
   &__title {
-    font-family: Montserrat, Arial, sans-serif;
+    font-family: Montserrat, OpenSans, sans-serif;
     font-weight: bold;
   }
 
