--- a/src/blocks/booking-card/booking-card.scss
+++ b/src/blocks/booking-card/booking-card.scss
@@ -10,7 +10,7 @@
   z-index: 1;
 
   &__subtitle {
-    font-family: Montserrat, Arial, sans-serif;
+    font-family: Montserrat, OpenSans, sans-serif;
     color: $dark-shade-100;
     text-transform: uppercase;
     font-size: .75rem;
