--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -60,7 +60,7 @@
   }
 
   &__subtitle {
-    font-family: Montserrat, Arial, sans-serif;
+    font-family: Montserrat, OpenSans, sans-serif;
     color: $dark-shade-100;
     font-size: .75rem;
     text-transform: uppercase;
