--- a/src/blocks/range-dates/range-dates.scss
+++ b/src/blocks/range-dates/range-dates.scss
@@ -6,7 +6,7 @@
 
   &__label {
     width: 100%;
-    font-family: Montserrat, Arial, sans-serif;
+    font-family: Montserrat, OpenSans, sans-serif;
     font-weight: bold;
     font-size: .75rem;
     line-height: .9375rem;
