--- a/src/pages/main-layout/main-layout.scss
+++ b/src/pages/main-layout/main-layout.scss
@@ -1,6 +1,6 @@
 .main-layout {
   color: rgba(31, 32, 65, 0.75);
-  font-family: Montserrat, Arial, sans-serif;
+  font-family: Montserrat, OpenSans, sans-serif;
   margin-top: 3em;
   font-size: 0.875rem;
   line-height: 1.5rem;
