--- a/src/blocks/range-dates/range-dates.scss
+++ b/src/blocks/range-dates/range-dates.scss
@@ -39,23 +39,20 @@
   }
 
   &__date-dropdown {
-    color: $dark-shade-25;
+    color: $dark-shade-75;
     border: 1px solid $dark-shade-25;
     border-radius: 4px;
     font-size: 0.875rem;
     line-height: 1.125rem;
-    padding-left: 15px;
+    padding-left: 14px;
+    padding-bottom: 6px;
+    letter-spacing: 1px;
     width: 100%;
     height: 44px;
-
-    &::placeholder {
-      color: $dark-shade-25;
-    }
 
     &:hover,
     &:focus {
       border-color: $dark-shade-50;
-      color: $dark-shade-75;
 
       &::placeholder {
         color: $dark-shade-75;
