#2 fix pp in booking-card

--- a/src/blocks/invoice/invoice.scss
+++ b/src/blocks/invoice/invoice.scss
@@ -12,7 +12,7 @@
       font-family: Quicksand, OpenSans, sans-serif;
       font-weight: bold;
       color: $dark-shade-100;
-      margin-top: 16px;
+      margin-top: 14px;
       margin-bottom: 0;
     }
   }
@@ -21,7 +21,7 @@
     position: relative;
     bottom: 20px;
     border-bottom: 1px dashed $dark-shade-25;
-    width: 62%;
+    width: 60%;
   }
 
   &__block {
@@ -33,6 +33,7 @@
     position: relative;
     padding-right: 24px;
     width: 80%;
+    line-height: 1.125rem;
 
     &--with-icon::after {
       position: absolute;
