--- a/src/blocks/booking-card/booking-card.scss
+++ b/src/blocks/booking-card/booking-card.scss
@@ -3,7 +3,7 @@
 .booking-card {
   display: block;
   width: 380px;
-  padding: 22px 30px 30px;
+  padding: 22px 30px 26px;
   background-color: $white;
   border-radius: 4px;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
@@ -14,6 +14,7 @@
     color: $dark-shade-100;
     text-transform: uppercase;
     font-size: .75rem;
+    margin-top: 16px;
     margin-bottom: 0;
   }
 
@@ -22,10 +23,11 @@
     justify-content: space-between;
     align-items: baseline;
     margin-top: 20px;
+    margin-bottom: 18px;
   }
 
   &__item {
-    margin: 6px 0;
+    margin: 4px 0;
     position: relative;
 
     &--index-hight {
@@ -38,6 +40,6 @@
   }
 
   &__invoice {
-    margin-top: 18px;
+    margin-top: 20px;
   }
 }
