--- a/src/pages/registration/registration.scss
+++ b/src/pages/registration/registration.scss
@@ -2,8 +2,16 @@
 @import '../../scss/sizes.scss';
 
 .registration {
-  position: absolute;
-  top: 100px;
-  left: calc(50% - 380px / 2);
-  z-index: 1;
+  background-image: url(./images/registration-background.png);
+  background-position-x: center;
+  background-position-y: -70px;
+  background-repeat: no-repeat;
+
+  &__content {
+    display: flex;
+    justify-content: space-around;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 30px 0 24px;
+  }
 }
